--- a/study/display_images.html
+++ b/study/display_images.html
@@ -8,5 +8,6 @@
 		<h1>CSS editor results</h1>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script type="text/javascript" src="display_images.js"></script>
+		<script type="text/javascript" src="replace-participant-names.js"></script>
 	</body>
 </html>
